# trading-bot

./: .gitignore  README.md  docker-compose.yml  start.sh
backend/: .dockerignore  Dockerfile  README.md  env.example  main.py  pyproject.toml  requirements.txt  start.sh
backend/app/: __init__.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: backtest.py  symbols.py  trading.py
backend/app/core/: backtest_report.py  config.py  database.py  logging.py  models.py  strategy.py  strategy_factory.py
backend/app/models/schemas/: __init__.py  backtest.py  common.py  symbols.py  trading.py
backend/app/repositories/: __init__.py  backtests.py  symbols.py  trades.py
backend/app/services/backtest/: __init__.py  service.py
backend/app/services/trading/: __init__.py  service.py
backend/app/strategies/: __init__.py  cdc_actionzone.py
backend/app/trading/: __init__.py  live_trader.py
backend/prisma/: schema.prisma
frontend/: .dockerignore  Dockerfile  README.md  env.example  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Charts.tsx  Dashboard.tsx  LiveChart.tsx  Navigation.tsx  TradesTable.tsx  TradingViewChart.tsx
frontend/src/components/ui/: select.tsx
frontend/src/hooks/: useStatusPolling.ts
frontend/src/lib/: api.ts
frontend/src/stores/: index.ts  useBacktestStore.ts  useStrategiesStore.ts  useSymbolsStore.ts  useTradingStore.ts
frontend/src/types/: index.ts
prisma/: schema.prisma
